<resources>
    <string name="app_name">ControleDePontos</string>
    <string name="txv_usuario">Usuário</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="txv_senha">Senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="txv_cadastro">CADASTRO</string>
    <string name="txv_nome_completo">Nome Completo</string>
    <string name="txv_email">E-mail</string>
    <string name="txv_confirmacao_senha">Confirmação de Senha</string>
    <string name="txv_inicio">INÍCIO</string>
    <string name="btn_registrar_ponto">REGISTRAR PONTO</string>
    <string name="btn_consulta_ponto">CONSULTA DE PONTO</string>
    <string name="btn_cadastro_cargo">CADASTRO DE CARGO</string>
    <string name="txv_cadastro_cargo">CADASTRO DE CARGO</string>
    <string name="txv_cargo">Cargo</string>
    <string name="btn_excluir">EXCLUIR</string>
    <string name="btn_registrar">REGISTRAR</string>
    <string name="txv_registro_ponto">REGISTRO DE PONTO</string>
    <string name="txv_consulta_ponto">CONSULTA DE PONTO</string>
    <string name="txv_data">Data</string>
    <string name="txv_entrada">Entrada</string>
    <string name="txv_saida">Saída</string>
    <string name="txv_horas_extras">Horas Extras</string>
    <string name="txv_perfil">PERFIL</string>
</resources>