<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroCargoActivity">

    <TextView
        android:id="@+id/txvCadastro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:background="@color/fundo"
        android:drawableLeft="@drawable/seta"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:text="@string/txv_cadastro_cargo"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/fundo"
        android:drawableLeft="@drawable/icone_usuario_azul"
        android:drawablePadding="5dp"
        android:hint="@string/txv_cargo"
        android:shadowColor="@color/fundo"
        android:singleLine="true"
        android:textColor="@color/fundo"
        android:textColorHint="@color/fundo"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/botao_azul"
        android:text="@string/btn_cadastrar"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/botao_vermelho"
        android:text="@string/btn_excluir"
        android:textColor="@android:color/white"/>

</LinearLayout>