<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConsultaPontoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fundo">
        <ImageView
            android:id="@+id/imgVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seta"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:text="@string/txv_consulta_ponto"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borda_cabecalho_lista">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/txv_data"
            android:textColor="@color/fundo"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/txv_entrada"
            android:textColor="@color/fundo"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/txv_saida"
            android:textColor="@color/fundo"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/txv_horas_extras"
            android:textColor="@color/fundo"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ltvLista"/>
</LinearLayout>