<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fundo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/logo_white"
        android:layout_margin="50dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@drawable/icone_usuario_branco"
        android:drawablePadding="5dp"
        android:hint="@string/txv_usuario"
        android:shadowColor="@android:color/white"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@drawable/icone_senha_branco"
        android:drawablePadding="5dp"
        android:hint="@string/txv_senha"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/botao_azul"
        android:text="@string/btn_entrar"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/botao_laranja"
        android:text="@string/btn_cadastrar"
        android:textColor="@android:color/white" />


</LinearLayout>