<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <TextView
        android:id="@+id/txvCadastro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/fundo"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/txv_inicio"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/imgUsuario"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/user_picture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center"
        android:text="Bom dia, Anderson Kanegae!"
        android:textColor="@color/fundo"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnRegistroPonto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:background="@drawable/botao_azul"
        android:text="@string/btn_registrar_ponto"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnConsultaPonto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:background="@drawable/botao_azul"
        android:text="@string/btn_consulta_ponto"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnCadastroCargo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/botao_azul"
        android:text="@string/btn_cadastro_cargo"
        android:textColor="@android:color/white"/>
</LinearLayout>